--- a/music-strayd/index.html
+++ b/music-strayd/index.html
@@ -1,1 +1,121 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <title>Martin Strayd Music — Official Artist Catalog</title>
+
+  <!-- CORE SEO -->
+  <meta name="description" content="Official music by Martin Strayd. Anti-Pop lifestyle soundtracks blending fun, rebellion, sex, desire, power, money, sadness, story, and cinematic emotion across a 150+ song artist-owned catalog." />
+  <meta name="robots" content="index, follow" />
+  <link rel="canonical" href="https://strayd.com/music.html" />
+
+<!-- SOCIAL / SHARE IMAGE -->
+<meta property="og:image" content="https://strayd.com/assets/martin-strayd-anti-pop-rockstar-catalog.png" />
+<meta property="og:image:width" content="1200" />
+<meta property="og:image:height" content="630" />
+<meta property="og:image:alt" content="MARTIN STRAYD — Anti-Pop Rockstar Official Music Catalog" />
+
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:image" content="https://strayd.com/assets/martin-strayd-anti-pop-rockstar-catalog.png" />
+<meta name="twitter:image:alt" content="MARTIN STRAYD — OG Anti-Pop Rockstar Official Music Catalog" />
+
+
+  <!-- OPEN GRAPH -->
+  <meta property="og:title" content="Martin Strayd Music — Official Artist Catalog" />
+  <meta property="og:description" content="A living soundtrack of fun, rebellion, sex, desire, power, money, survival and freedom. Official music by Martin Strayd." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://strayd.com/music.html" />
+
+  <!-- ARTIST SCHEMA (ARTIST-SAFE ONLY) -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "MusicArtist",
+    "name": "Martin Strayd",
+    "description": "Martin Strayd creates Anti-Pop lifestyle soundtrack music blending cinematic emotion, modern production, and fun rebellious energy across a large artist-owned catalog.",
+    "genre": [
+      "Anti-Pop",
+      "Electronic",
+      "Rock",
+      "Soundtrack",
+      "Pop",
+      "Alternative"
+    ],
+    "sameAs": [
+      "https://songshare.com/artist/mcxzkfj3"
+    ]
+  }
+  </script>
+
+<!-- Favicon (root) -->
+<link rel="icon" href="/favicon.ico" type="image/x-icon">
+<link rel="shortcut icon" href="../strayd.ico" type="image/x-icon">
+
+<!-- Optional modern formats (if present in root) 
+<link rel="icon" type="image/png" sizes="32x32" href="/strayd-favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/strayd-favicon-16x16.png"> -->
+
+<!-- Apple Touch Icon (optional, if you have it)
+<link rel="apple-touch-icon" href="../apple-touch-icon.png">  -->
+  <link rel="stylesheet" href="../style.css">
+<style>    </style> 
+</head>
+
+<body>
+ <div class="hero-bg"></div>
+ <div class="hero-overlay"></div>
+   <div class="hero-content">
+  <!-- HEADER / MENU -->
+  <header>
+    <div class="logo">MARTIN STRAYD</div>
+    <nav>
+    <a href="../index.html">HOME</a>
+    <a href="../sync-strayd/index.html">SYNC</a>
+      <a href="../catalog-strayd/index.html">CATALOG</a>
+      <a href="../vault-strayd/index.html">VAULT</a>
+      <a href="index.html">MUSIC</a>
+    </nav>
+ </header>
+
+      <main>
+        <div class="herox">
+<div class="subtitle">
+Artist Martin Strayd • Music Ménagement • Viral Trending Music Catalog
+</div>
+
+<h1>TELL YOUR FRIENDS</h1>
+ <p class="description">The MΛRTIN STRAYD catalog spans four decades of attitude and cinematic storytelling—moving fluidly through rock, reggae, blues, electronic, and remixed dancefloor intimacy—each song grounded in story-driven emotion, wild modern life, and unapologetic good times.</p> 
+
+
+
+<a class="cta" href="https://songshare.com/artist/mcxzkfj3" target="_blank" rel="noopener">Links to Music</a>
+        
+        
+
+          <a class="cta" href="https://www.youtube.com/@martinstrayd?sub_confirmation=1" target="_blank" rel="noopener">Subscribe</a>
+
+  <a class="cta" href="https://buymeacoffee.com/martinstrayd" target="_blank" rel="noopener">Donate</a>
+
+<a class="cta" href="https://youtube.com/playlist?list=PLsZPfJD1XvTdQIQ2kM4kO2OCNJ9U8ar0X&si=t3r2c_5Nsk-PORRM" target="_blank" rel="noopener">Make Playlist</a>
+
+          <div class="tags">
+            PARTY • REBELLION • SEX • DESIRE • MONEY • POWER • SADNESS • STORY • FINTECH • CRYPTO • SOUNDTRACK • PARADISE
+          </div>
+        </div>
+      </main>
+
+<div class="footer">
+© Martin Strayd — All music written and owned by the artist
+</div>
+    </div>
+
+
+  </section>
+
+ 
+
+</body>
+</html>
 
