--- a/sync-strayd/index.html
+++ b/sync-strayd/index.html
@@ -1,1 +1,150 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+  <title>Martin Strayd Music — Sync & Visual Media</title>
+
+  <!-- CORE SEO -->
+  <meta name="description" content="Martin Strayd sync-ready music catalog. Anti-Pop cinematic lifestyle soundtracks for film, television, games, advertising, podcasts, trailers, and digital media." />
+  <meta name="robots" content="index, follow" />
+  <link rel="canonical" href="https://strayd.com/sync.html" />
+
+  <!-- OPEN GRAPH -->
+  <meta property="og:title" content="Martin Strayd — Sync Music & Visual Soundtracks" />
+  <meta property="og:description" content="Cinematic Anti-Pop music for film, TV, games, ads, podcasts, and modern visual culture. Artist-owned catalog by Martin Strayd." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://strayd.com/sync.html" />
+
+<!-- SOCIAL / SHARE IMAGE -->
+<meta property="og:image" content="https://strayd.com/assets/martin-strayd-anti-pop-rockstar-catalog.png" />
+<meta property="og:image:width" content="1200" />
+<meta property="og:image:height" content="630" />
+<meta property="og:image:alt" content="MARTIN STRAYD — Anti-Pop Rockstar Official Music Catalog" />
+
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:image" content="https://strayd.com/assets/martin-strayd-anti-pop-rockstar-catalog.png" />
+<meta name="twitter:image:alt" content="MARTIN STRAYD — OG Anti-Pop Rockstar Official Music Catalog" />
+
+
+  <!-- ARTIST SCHEMA -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "MusicArtist",
+    "name": "Martin Strayd",
+    "description": "Martin Strayd creates cinematic Anti-Pop lifestyle soundtrack music for visual media, blending emotion, rebellion, and modern culture.",
+    "genre": ["Anti-Pop","Soundtrack","Electronic","Rock","Alternative"],
+    "sameAs": ["https://songshare.com/artist/mcxzkfj3"]
+  }
+  </script>
+
+ <link rel="stylesheet" href="../pagestyle.css">
+<!-- Favicon (root) -->
+<link rel="icon" href="/favicon.ico" type="image/x-icon">
+<link rel="shortcut icon" href="../strayd.ico" type="image/x-icon">
+
+<!-- Optional modern formats (if present in root) 
+<link rel="icon" type="image/png" sizes="32x32" href="/strayd-favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/strayd-favicon-16x16.png"> -->
+
+<!-- Apple Touch Icon (optional, if you have it)
+<link rel="apple-touch-icon" href="../apple-touch-icon.png">  -->
+<style>    </style>
+
+</head>
+
+<body>
+
+<header>
+  <div class="logo">MARTIN STRAYD</div>
+  <nav>
+    <a href="../index.html">HOME</a>
+    <a href="index.html">SYNC</a>
+      <a href="../catalog-strayd/index.html">CATALOG</a>
+      <a href="../vault-strayd/index.html">VAULT</a>
+      <a href="../music-strayd/index.html">MUSIC</a>
+  </nav>
+</header>
+
+<section class="hero">
+  <div class="hero-inner">
+
+    <div class="subtitle">Music for Film • Visuals • Digital Culture • Storytelling</div>
+
+    <h1>SYNC</h1>
+
+    <p class="description">
+      Martin Strayd’s music is designed as cinematic lifestyle soundtrack material —
+      emotionally direct, visually suggestive, and adaptable across film, television,
+      digital media, online content, and modern storytelling formats.
+      <br><br>
+      The catalog spans energetic party records, dark emotional moments, rebellious anthems,
+      atmospheric cues, travel moods, and narrative-driven songs suitable for contemporary
+      visual culture.
+    </p>
+
+    <p class="description">
+      Martin Strayd creates cinematic multi-genre 'Anti-Pop-Club' music designed to live inside modern visual culture.
+      The catalog supports film, television, streaming series, advertising, games, social media,
+      short-form video, trailers, and digital storytelling — moving fluidly between emotion,
+      energy, tension, intimacy, and atmosphere.
+    </p>
+
+    <a class="cta" href="../catalog-strayd/catalog.html">Explore the Catalog</a>
+
+  </div>
+</section>
+
+<!-- GENRES -->
+<section class="box-section">
+  <div class="box-title">Genres</div>
+  <div class="grid">
+    <div class="box">Anti-Pop</div>
+    <div class="box">Rock</div>
+    <div class="box">Electronic</div>
+    <div class="box">Soundtrack</div>
+    <div class="box">Alternative</div>
+    <div class="box">Pop</div>
+    <div class="box">DJ Remix</div>
+    <div class="box">Spoken Word</div>
+  </div>
+</section>
+
+<!-- MOODS -->
+<section class="box-section">
+  <div class="box-title">Moods & Themes</div>
+  <div class="grid">
+    <div class="box">Rebellion</div>
+    <div class="box">Desire</div>
+    <div class="box">Power</div>
+    <div class="box">Money</div>
+    <div class="box">Victory</div>
+    <div class="box">Dark</div>
+    <div class="box">Sadness</div>
+    <div class="box">Story</div>
+  </div>
+</section>
+
+<!-- USE CASES -->
+<section class="box-section">
+  <div class="box-title">Use Cases</div>
+  <div class="grid">
+    <div class="box">Film & Television</div>
+    <div class="box">Trailers</div>
+    <div class="box">Games</div>
+    <div class="box">Advertising</div>
+    <div class="box">Podcasts</div>
+    <div class="box">YouTube</div>
+    <div class="box">TikTok & Shorts</div>
+    <div class="box">AI Media</div>
+  </div>
+</section>
+
+<footer>
+  © MARTIN STRAYD — All music written and owned by the artist
+</footer>
+
+</body>
+</html>
