--- a/vault-strayd/index.html
+++ b/vault-strayd/index.html
@@ -1,1 +1,148 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+  <title>MARTIN STRAYD — The Vault</title>
+
+  <!-- CORE SEO -->
+  <meta name="description" content="The Vault is the private asset layer of Martin Strayd — masters, publishing, stems, metadata, and future-facing music IP built for sync, playlists, AI indexing, and long-term catalog value." />
+  <meta name="robots" content="index, follow" />
+  <link rel="canonical" href="https://strayd.com/vault.html" />
+<!-- Favicon (root) -->
+<link rel="icon" href="/favicon.ico" type="image/x-icon">
+<link rel="shortcut icon" href="../strayd.ico" type="image/x-icon">
+
+<!-- Optional modern formats (if present in root) 
+<link rel="icon" type="image/png" sizes="32x32" href="/strayd-favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/strayd-favicon-16x16.png"> -->
+
+<!-- Apple Touch Icon (optional, if you have it)
+<link rel="apple-touch-icon" href="../apple-touch-icon.png">  -->
+
+  <!-- DEFAULT SOCIAL IMAGE -->
+  <meta property="og:image" content="https://strayd.com/images/martin-strayd-anti-pop-rockstar-catalog.png" />
+  <meta property="og:image:alt" content="Martin Strayd Anti-Pop Rockstar Catalog" />
+
+  <!-- OPEN GRAPH -->
+  <meta property="og:title" content="MARTIN STRAYD — The Vault" />
+  <meta property="og:description" content="The private asset layer of Martin Strayd — masters, publishing, stems, metadata, and licensing pathways for serious partners." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://strayd.com/vault.html" />
+
+<!-- SOCIAL / SHARE IMAGE -->
+<meta property="og:image" content="https://strayd.com/assets/martin-strayd-anti-pop-rockstar-catalog.png" />
+<meta property="og:image:width" content="1200" />
+<meta property="og:image:height" content="630" />
+<meta property="og:image:alt" content="MARTIN STRAYD — Anti-Pop Rockstar Official Music Catalog" />
+
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:image" content="https://strayd.com/assets/martin-strayd-anti-pop-rockstar-catalog.png" />
+<meta name="twitter:image:alt" content="MARTIN STRAYD — OG Anti-Pop Rockstar Official Music Catalog" />
+
+
+  <!-- ARTIST SCHEMA -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "MusicArtist",
+    "name": "Martin Strayd",
+    "description": "Martin Strayd is an independent Anti-Pop artist owning 100% of masters and publishing across a large multi-genre catalog designed for playlists, sync, AI indexing, and long-term IP value.",
+    "sameAs": [
+      "https://songshare.com/artist/mcxzkfj3"
+    ]
+  }
+  </script>
+
+  <link rel="stylesheet" href="../pagestyle.css">
+<style>    </style>
+
+</head>
+
+<body>
+
+<header>
+  <div class="logo">MARTIN STRAYD</div>
+  <nav>
+    <a href="../index.html">HOME</a>
+    <a href="../sync-strayd/index.html">SYNC</a>
+      <a href="../catalog-strayd/index.html">CATALOG</a>
+      <a href="index.html">VAULT</a>
+      <a href="../music-strayd/index.html">MUSIC</a>
+  </nav>
+</header>
+
+<section class="hero">
+  <div class="hero-inner">
+
+    <div class="subtitle">Private Music IP • Artist-Owned • Future-Facing</div>
+
+    <h1>THE VAULT</h1>
+
+    <p class="description">
+      The private asset layer of Martin Strayd — Masters, Publishing, Stems, AI datasets and licensing rights available for serious partners.
+   
+The Vault is the private asset layer of Martin Strayd — a fully artist-owned music catalog with no label ownership, no publishing splits, and no clearance complications.
+
+This is where masters, publishing, stems, instrumentals, acapellas, metadata, and AI-ready music assets are made available for serious partners across media, technology, and acquisition. </p>
+    <a class="cta" href="https://songshare.com/artist/mcxzkfj3">Explore the Catalog</a>
+
+    <a class="cta" href="../music-strayd/music.html">Listen to the Music</a>
+
+  </div>
+</section>
+
+<!-- ASSETS -->
+<section class="box-section">
+  <div class="box-title">Assets</div>
+  <div class="grid">
+    <div class="box">Masters<br>100% artist-owned recordings</div>
+    <div class="box">Publishing<br>Full songwriter & composition rights</div>
+    <div class="box">Stems<br>Multitrack files for remix, film, ads & AI</div>
+    <div class="box">Instrumentals<br>Clean broadcast-ready versions</div>
+    <div class="box">Acapellas<br>Vocal isolation for remix & licensing</div>
+    <div class="box">Metadata<br>Lyrics, mood, BPM, keys & tagging</div>
+  </div>
+</section>
+
+<!-- LICENSE USE CASES -->
+<section class="box-section">
+  <div class="box-title">Use Cases</div>
+  <div class="grid">
+    <div class="box">Film & TV Sync</div>
+    <div class="box">Games & VR</div>
+    <div class="box">Ads & Brands</div>
+    <div class="box">TikTok / Shorts</div>
+    <div class="box">YouTube Content</div>
+    <div class="box">DJ & Clubs</div>
+    <div class="box">AI Training</div>
+    <div class="box">Catalog Acquisition</div>
+  </div>
+</section>
+
+<!-- WHY THIS VAULT -->
+<section class="box-section">
+  <div class="box-title">Why This Vault</div>
+  <div class="grid">
+    <div class="box">Global distribution</div>
+    <div class="box">Algorithm-ready</div>
+    <div class="box">Future-proof IP</div>
+  </div>
+</section>
+
+<!-- ADDITIVE: PLAYLIST INTELLIGENCE -->
+<section class="box-section">
+  <div class="box-title">Playlist Intelligence</div>
+  <div class="description" style="text-align:center;">
+    This catalog is structured to support Spotify, YouTube, TikTok, and AI-curated playlists through
+    consistent mood taxonomy, thematic tagging, narrative identity, and cross-platform semantic signals.
+  </div>
+</section>
+
+<footer>
+  © MARTIN STRAYD — All music written and owned by the artist
+</footer>
+
+</body>
+</html>
