--- a/index.html
+++ b/index.html
@@ -78,10 +78,10 @@
         <div class="logo">MARTIN STRAYD</div>
         <nav>
             <a href="index.html">HOME</a>
-      <a href="sync-strayd/sync.html">SYNC</a>
-      <a href="catalog-strayd/catalog.html">CATALOG</a>
-      <a href="vault-strayd/vault.html">VAULT</a>
-      <a href="music-strayd/music.html">MUSIC</a>
+      <a href="sync-strayd/index.html">SYNC</a>
+      <a href="catalog-strayd/index.html">CATALOG</a>
+      <a href="vault-strayd/index.html">VAULT</a>
+      <a href="music-strayd/index.html">MUSIC</a>
         </nav>
       </header>
 
@@ -124,3 +124,4 @@ The MΛRTIN STRAYD catalog spans four decades of attitude and cinematic storytel
 
 </body>
 </html>
+
